Lots of mobile fixes

--- a/package.json
+++ b/package.json
@@ -117,7 +117,10 @@
       "prefer-const": 2,
       "quotes": [
         2,
-        "single"
+        "single",
+        {
+          "avoidEscape": true
+        }
       ],
       "semi": [
         2,
