Enable babel loose mode for better performance

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
       [
         "env",
         {
-          "modules": false
+          "modules": false,
+          "loose": false
         }
       ]
     ]
