--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
         "env",
         {
           "modules": false,
-          "loose": false
+          "loose": true
         }
       ]
     ]
