updates to config for staging server

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-assets_base_url: "/interactives/2017annualreport"
+assets_base_url: "/"
 title: CIGI 2017 Annual Report
 email: websiteupdates@cigionline.org
 description: CIGI Annual Report
