pushing to github pages

--- a/_config.staging.yml
+++ b/_config.staging.yml
@@ -1,9 +1,9 @@
-assets_base_url: "/2017annualreport"
-title: Your awesome title
-email: your-email@domain.com
+assets_base_url: "/interactives/2017annualreport"
+title: CIGI 2017 Annual Report
+email: websiteupdates@cigionline.org
 description: CIGI Annual Report
-baseurl: "/2017annualreport"
-url: "https://cigihub.github.io"
+baseurl: "/interactives/2017annualreport"
+url: "https://staging.cigionline.org"
 
 # Build settings
 markdown: kramdown
