--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-import": "^2.7.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "gh-pages": "^1.0.0",
+    "nodemailer": "^4.4.0",
     "stylelint": "^8.0.0",
     "stylelint-config-sass-guidelines": "^2.2.0",
     "stylelint-processor-ignore-front-matter": "^0.1.0",
@@ -227,5 +228,7 @@
       "color-named": null
     }
   },
-  "dependencies": {}
+  "dependencies": {
+    "nodemailer": "^4.4.0"
+  }
 }
