--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^4.2.0",
     "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-plugin-import": "^2.7.0",
+    "express": "^4.16.2",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "gh-pages": "^1.0.0",
     "nodemailer": "^4.4.0",
