--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: CIGI 2017 Annual Report
 email: websiteupdates@cigionline.org
 description: CIGI Annual Report
 baseurl: "/interactives/2017annualreport"
-url: "https://staging.cigionline.org"
+url: "https://www.cigionline.org"
 
 # Build settings
 markdown: kramdown
